# code-story

./: .dockerignore  .env.example  .gitignore  COMPLETION.md  Dockerfile  Dockerfile.dev  Makefile  PROGRESS.md  VALIDATION-REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  ralph.yml
.agent/cache/: prefix_75635c5b.txt
.agent/metrics/: metrics_20260101_235914.json  metrics_20260102_010359.json
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_admin_authentication.py  0003_analytics_tables.py  0003_team_workspaces.py  0004_team_collaboration.py  0005_sso_integration.py
charts/code-story/: Chart.yaml  README.md  values-production.yaml  values.yaml
charts/code-story/templates/: _helpers.tpl  networkpolicy.yaml  secrets.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md
docs-plans-prompts-specs/: PROMPT.md
docs-plans-prompts-specs/plans/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md
docs-plans-prompts-specs/plans/02-intent-agent/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md
docs-plans-prompts-specs/plans/03-repo-analyzer/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-05-PLAN.md
docs-plans-prompts-specs/plans/04-story-architect/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-05-PLAN.md
docs-plans-prompts-specs/plans/05-voice-director/: 05-01-PLAN.md  (+3 more)
docs/api/: openapi.json  openapi.yaml
scripts/: export_openapi.py  init-db.sql
src/codestory/: __init__.py
tests/: __init__.py  test_models.py
(+153 files in other folders)
